--- a/css/custom.css
+++ b/css/custom.css
@@ -715,7 +715,7 @@
      float: left;
      width: 100%;
 }
- .top-stroy-header {
+ .top-story-header {
      padding: 0 30px;
 }
  .top-story h2 {
@@ -740,17 +740,17 @@
      text-transform: capitalize;
      padding: 0;
 }
- .other-stroies li {
+ .other-stories li {
      position: relative;
      margin: 7px 0;
 }
- .other-stroies li a {
+ .other-stories li a {
      padding: 9px 30px;
      color: #555;
      font-weight: 400;
      font-size: 14px;
 }
- .other-stroies li::before {
+ .other-stories li::before {
      content: "\f105";
      font-family: fontawesome;
      position: absolute;
@@ -763,7 +763,7 @@
      padding: 0;
      list-style: none;
 }
- .other-stroies {
+ .other-stories {
      float: left;
      width: 100%;
      padding-left: 15px;
